--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- author: {{author}}, description: {{description}}-->
+<!-- author: {{author}}, description: {{description}}, createTime: {{date}} -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
